<resources>
    <string name="app_name">Scheduler</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login with Google</string>
    <string name="need_an_account">Need an Account?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="good_morning">Good morning))</string>
    <string name="isro_abdillah">Isro Abdillah</string>
    <string name="monday">Monday</string>
    <string name="due_date">Due Date</string>
    <string name="_10_oktober_2022">10 Oktober, 2022</string>
    <string name="today_there_are_two_lectures">Today there are two lectures.</string>
    <string name="today_s_classes">Today\'s Classes</string>
    <string name="check_another_schedule">Check another schedule</string>
    <string name="account">Account</string>
    <string name="preferences">Preferences</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="current_task">Current Task</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="ok">OK</string>
    <string name="home">Home</string>
</resources>