<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.main.presentation.MainPageFragment"
    android:background="@color/white"
    android:paddingVertical="@dimen/dp_1x"
    android:paddingHorizontal="@dimen/dp_3x"
    android:paddingBottom="@dimen/dp_4x">

    <TextView
        android:id="@+id/greetingTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_morning"
        style="@style/Text3BoldStyle"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1x"
        android:text="@string/isro_abdillah"
        style="@style/Text1Style"
        android:textColor="@color/dark_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetingTxt" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profileImageContainer"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/dp_2x"
        app:cardCornerRadius="50dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_google" />
    </androidx.cardview.widget.CardView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImageContainer">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner"
                    android:backgroundTint="@color/dark_blue"
                    android:layout_marginVertical="@dimen/dp_4x"
                    android:paddingHorizontal="@dimen/dp_3x"
                    android:paddingVertical="@dimen/dp_2x">

                    <TextView
                        android:id="@+id/weekdayTxt"
                        style="@style/Text1Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monday"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/currentDate"
                        style="@style/Text6Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_1x"
                        android:text="@string/due_date"
                        android:textColor="@color/D1D1D1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/weekdayTxt" />

                    <TextView
                        android:id="@+id/dateTimeTxt"
                        style="@style/Text4BoldStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_10_oktober_2022"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/currentDate" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/todaysLecutresAre"
                        style="@style/Text5Style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_2x"
                        android:backgroundTint="@color/e87a30"
                        android:text="@string/today_there_are_two_lectures"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dateTimeTxt" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        app:cardBackgroundColor="@color/_5dad6e"
                        app:cardCornerRadius="30dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="36dp"
                        app:cardBackgroundColor="@color/e87a30"
                        app:cardCornerRadius="30dp"
                        app:layout_constraintEnd_toStartOf="@+id/cardView"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/todaysClassesTitle"
                    style="@style/Text2Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_s_classes"
                    android:textColor="@color/e87a30"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dateTime2Txt"
                    style="@style/Text6Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_1x"
                    android:text="10 Oktober, 2022"
                    android:textColor="@color/D1D1D1"
                    app:layout_constraintBottom_toBottomOf="@+id/todaysClassesTitle"
                    app:layout_constraintStart_toEndOf="@+id/todaysClassesTitle"
                    app:layout_constraintTop_toTopOf="@+id/todaysClassesTitle" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tasksRv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/dp_3x"
                    android:background="@drawable/rounded_corner"
                    android:paddingHorizontal="@dimen/dp_3x"
                    android:paddingVertical="@dimen/dp_2x"
                    android:layout_marginBottom="80dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/todaysClassesTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>